; ModuleID = '/home/carl/AnghaBench/redis/deps/jemalloc/src/extr_tcache.c_tsd_tcache_enabled_data_init.c'
source_filename = "/home/carl/AnghaBench/redis/deps/jemalloc/src/extr_tcache.c_tsd_tcache_enabled_data_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@opt_tcache = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tsd_tcache_enabled_data_init(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = load i64, i64* @opt_tcache, align 8
  %5 = call i32 @tsd_tcache_enabled_set(i32* %3, i64 %4)
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @tsd_slow_update(i32* %6)
  %8 = load i64, i64* @opt_tcache, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @tsd_tcache_data_init(i32* %11)
  br label %13

13:                                               ; preds = %10, %1
  ret i32 0
}

declare dso_local i32 @tsd_tcache_enabled_set(i32*, i64) #1

declare dso_local i32 @tsd_slow_update(i32*) #1

declare dso_local i32 @tsd_tcache_data_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
